# universal_agent

./: .gitignore  README.md  a2a_client.py  agent.py  agent_manager.py  api.py  app_bootstrapper.py  config.template.toml  conversation_service.py  dto.py  main.py  memory_store.py  model.py  prompt_templates.py  pyproject.toml  tools.py  tools_manager.py  utils.py
